--- a/profiles/clarence.html
+++ b/profiles/clarence.html
@@ -25,7 +25,7 @@
         <div
           class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
         >
-          <a href="/" class="text-white text-decoration-none navbar-brand">
+          <a href="../" class="text-white text-decoration-none navbar-brand">
             KALUGURANS
           </a>
           MEET THE TEAM
